--- a/src/app/ng-cnt-market-first-page/ng-cnt-market-first-page.component.html
+++ b/src/app/ng-cnt-market-first-page/ng-cnt-market-first-page.component.html
@@ -1,1 +1,41 @@
-<p>ng-cnt-market-first-page works!</p>
+<s-cnt-market-header-base
+  [logo]="getLogo()"
+  [number]="getNumberHeader()"
+></s-cnt-market-header-base>
+<!--<main>-->
+<!--  <s-cnt-market-selection-->
+<!--    [forSelection]="{forSelection}"-->
+<!--    [homePageImage]="{homePageImage}"-->
+<!--    [homeText]="{homeText}"-->
+<!--    [homeSubText]="{homeSubText}"-->
+<!--  >-->
+<!--  </s-cnt-market-selection>-->
+<!--  &lt;!&ndash;  <s-cnt-market-offer&ndash;&gt;-->
+<!--  &lt;!&ndash;    [forOffer]={forOffer}&ndash;&gt;-->
+<!--  &lt;!&ndash;    [offerTitleText]={offerTitleText}&ndash;&gt;-->
+<!--  &lt;!&ndash;  >&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-offer>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-statistics&ndash;&gt;-->
+<!--  &lt;!&ndash;    [forStatistics]={forStatistics}&ndash;&gt;-->
+<!--  &lt;!&ndash;  >&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-statistics>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-delivery&ndash;&gt;-->
+<!--  &lt;!&ndash;    [delivery]={delivery}&ndash;&gt;-->
+<!--  &lt;!&ndash;  >&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-delivery>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-choice&ndash;&gt;-->
+<!--  &lt;!&ndash;    [forChoice]={forChoice}&ndash;&gt;-->
+<!--  &lt;!&ndash;    [choiceTitleText]={choiceTitleText}&ndash;&gt;-->
+<!--  &lt;!&ndash;  >&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-choice>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-specialist&ndash;&gt;-->
+<!--  &lt;!&ndash;    [forSpecialist]={forSpecialist}&ndash;&gt;-->
+<!--  &lt;!&ndash;  >&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-specialist>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-courier [forCourier]={forCourier}>&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-courier>&ndash;&gt;-->
+<!--  &lt;!&ndash;  <s-cnt-market-app [forApp]={forApp}>&ndash;&gt;-->
+<!--  &lt;!&ndash;  </s-cnt-market-app>&ndash;&gt;-->
+<!--</main>-->
+<!--<s-cnt-market-footer [footerData]="{footerData}"></s-cnt-market-footer>-->
+<!--<s-cnt-market-back-to-top></s-cnt-market-back-to-top>-->
