--- a/src/app/ng-cnt-market-first-page/ng-cnt-market-first-page.component.html
+++ b/src/app/ng-cnt-market-first-page/ng-cnt-market-first-page.component.html
@@ -2,40 +2,40 @@
   [logo]="getLogo()"
   [number]="getNumberHeader()"
 ></s-cnt-market-header-base>
-<!--<main>-->
-<!--  <s-cnt-market-selection-->
-<!--    [forSelection]="{forSelection}"-->
-<!--    [homePageImage]="{homePageImage}"-->
-<!--    [homeText]="{homeText}"-->
-<!--    [homeSubText]="{homeSubText}"-->
-<!--  >-->
-<!--  </s-cnt-market-selection>-->
-<!--  &lt;!&ndash;  <s-cnt-market-offer&ndash;&gt;-->
-<!--  &lt;!&ndash;    [forOffer]={forOffer}&ndash;&gt;-->
-<!--  &lt;!&ndash;    [offerTitleText]={offerTitleText}&ndash;&gt;-->
-<!--  &lt;!&ndash;  >&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-offer>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-statistics&ndash;&gt;-->
-<!--  &lt;!&ndash;    [forStatistics]={forStatistics}&ndash;&gt;-->
-<!--  &lt;!&ndash;  >&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-statistics>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-delivery&ndash;&gt;-->
-<!--  &lt;!&ndash;    [delivery]={delivery}&ndash;&gt;-->
-<!--  &lt;!&ndash;  >&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-delivery>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-choice&ndash;&gt;-->
-<!--  &lt;!&ndash;    [forChoice]={forChoice}&ndash;&gt;-->
-<!--  &lt;!&ndash;    [choiceTitleText]={choiceTitleText}&ndash;&gt;-->
-<!--  &lt;!&ndash;  >&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-choice>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-specialist&ndash;&gt;-->
-<!--  &lt;!&ndash;    [forSpecialist]={forSpecialist}&ndash;&gt;-->
-<!--  &lt;!&ndash;  >&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-specialist>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-courier [forCourier]={forCourier}>&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-courier>&ndash;&gt;-->
-<!--  &lt;!&ndash;  <s-cnt-market-app [forApp]={forApp}>&ndash;&gt;-->
-<!--  &lt;!&ndash;  </s-cnt-market-app>&ndash;&gt;-->
-<!--</main>-->
+<main>
+  <s-cnt-market-selection
+    [forSelection]="getForSelection()"
+    [homePageImage]="getHomePageImge()"
+    [homeText]="getHomeText()"
+    [homeSubText]="getHomeSubText()"
+  >
+  </s-cnt-market-selection>
+    <s-cnt-market-offer
+      [forOffer]="getForOffer()"
+      [offerTitleText]="getOfferTitleText()"
+    >
+    </s-cnt-market-offer>
+    <s-cnt-market-statistics
+      [forStatistics]="getForStatictics()"
+    >
+    </s-cnt-market-statistics>
+    <s-cnt-market-delivery
+      [delivery]="getDelivery()"
+    >
+    </s-cnt-market-delivery>
+    <s-cnt-market-choice
+      [forChoice]="getForChoice()"
+      [choiceTitleText]="getChoiceTitleText()"
+    >
+    </s-cnt-market-choice>
+    <s-cnt-market-specialist
+      [forSpecialist]="getForSpecialist()"
+    >
+    </s-cnt-market-specialist>
+    <s-cnt-market-courier [forCourier]="getForCourier()">
+    </s-cnt-market-courier>
+    <s-cnt-market-app [forApp]="getForApp()">
+    </s-cnt-market-app>
+</main>
 <!--<s-cnt-market-footer [footerData]="{footerData}"></s-cnt-market-footer>-->
 <!--<s-cnt-market-back-to-top></s-cnt-market-back-to-top>-->
