--- a/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
+++ b/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
@@ -1,1 +1,2 @@
-<p>second-page works!</p>
+<app-ng-cnt-market-header base="false" ></app-ng-cnt-market-header>
+<app-ng-cnt-market-footer></app-ng-cnt-market-footer>
