--- a/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
+++ b/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
@@ -1,2 +1,2 @@
-<app-ng-cnt-market-header [firstPage]="true" ></app-ng-cnt-market-header>
+<app-ng-cnt-market-header [firstPage]="false" ></app-ng-cnt-market-header>
 <app-ng-cnt-market-footer></app-ng-cnt-market-footer>
