--- a/src/app/shared/ng-cnt-market-footer/ng-cnt-market-footer.component.html
+++ b/src/app/shared/ng-cnt-market-footer/ng-cnt-market-footer.component.html
@@ -8,13 +8,16 @@
             [ngStyle]="{ 'background-image': 'url(' + getLogoFooter() + ')' }"
           ></div>
         </div>
-        <div *ngFor="let item of getMenuItemFooter()" >
-          <div class=" col-12 col-sm-6 col-md-4 col-lg-3">
-            <s-cnt-market-up-footer [footerMenu]="getMenuItemFooter()" ></s-cnt-market-up-footer>
-          </div>
+        <div
+          class="col-12 col-sm-6 col-md-4 col-lg-3"
+          *ngFor="let item of getMenuItemFooter()"
+        >
+          <s-cnt-market-up-footer [footerMenu]="item"></s-cnt-market-up-footer>
         </div>
         <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-          <s-cnt-market-up-footer-form [footerContactColumn]="getFooterContactColumn()"></s-cnt-market-up-footer-form>
+          <s-cnt-market-up-footer-form
+            [footerContactColumn]="getFooterContactColumn()"
+          ></s-cnt-market-up-footer-form>
         </div>
       </div>
     </div>
