added components for second page

--- a/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
+++ b/src/app/ng-cnt-market-second-page/ng-cnt-market-second-page.component.html
@@ -1,3 +1,27 @@
-<app-ng-cnt-market-header [firstPage]="false" ></app-ng-cnt-market-header>
-
+<app-ng-cnt-market-header [firstPage]="false"></app-ng-cnt-market-header>
+<main>
+  <s-cnt-market-promo-slider
+    [promoSliderCards]="getPromoSliderCards()"
+  ></s-cnt-market-promo-slider>
+  <s-cnt-market-products-slider
+    [productsSliderCards]="getProductsSliderCards()"
+    [productsSliderTitle]="getProductsSliderTitle()"
+    (showModal)="showOrCloseModal()"
+  ></s-cnt-market-products-slider>
+  <s-cnt-market-products-list
+    (showModal)="showOrCloseModal()"
+    [productsList]="getProductsList()"
+  ></s-cnt-market-products-list>
+  <s-cnt-market-recently-watched
+    (showModal)="showOrCloseModal()"
+    [recentlyWatchedProducts]="getRecentlyWatchedProducts()"
+    [recentlyWatchedTitle]="getRecentlyWatchedTitle()"
+  ></s-cnt-market-recently-watched>
+  <s-cnt-market-modal-window
+    *ngIf="showModalState"
+    [productModal]="getProductModal()"
+    (clickOnModal)="showOrCloseModal()"
+  ></s-cnt-market-modal-window>
+  <s-cnt-market-back-to-top></s-cnt-market-back-to-top>
+</main>
 <app-ng-cnt-market-footer></app-ng-cnt-market-footer>
